horizontal scollabes + uiunstretch + bugfxies

--- a/src/styles/desktop.css
+++ b/src/styles/desktop.css
@@ -305,6 +305,7 @@ img {
 
 .sidebar-info {
     width: 100%;
+    max-width: calc(100% - 160px);
 }
 
 @keyframes windowSemiFade {
